--- a/terraform/templates/deploy.tmpl
+++ b/terraform/templates/deploy.tmpl
@@ -17,14 +17,14 @@ scp -i "$PROJECT_DIR/ansible/$CLIENT_KEY" -o StrictHostKeyChecking=no \
     -o UserKnownHostsFile=/dev/null \
     -r "$PROJECT_DIR/ansible" "$USER@$CONTROL_NODE_IP:$REMOTE_PATH"
 
-# echo "Setting correct key permissions..."
-# ssh -i "$PROJECT_DIR/ansible/$CLIENT_KEY" -o StrictHostKeyChecking=no \
-#     -o UserKnownHostsFile=/dev/null \
-#     "$USER@$CONTROL_NODE_IP" \
-#     "chmod 400 $REMOTE_PATH/ansible/$CLIENT_KEY.pem"
+echo "Setting correct key permissions..."
+ssh -i "$PROJECT_DIR/ansible/$CLIENT_KEY" -o StrictHostKeyChecking=no \
+    -o UserKnownHostsFile=/dev/null \
+    "$USER@$CONTROL_NODE_IP" \
+    "chmod 400 $REMOTE_PATH/ansible/$CLIENT_KEY.pem"
 
-# echo "Running Ansible Playbook..."
-# ssh -i "$PROJECT_DIR/ansible/$CLIENT_KEY" -o StrictHostKeyChecking=no \
-#     -o UserKnownHostsFile=/dev/null \
-#     "$USER@$CONTROL_NODE_IP" \
-#     "cd $REMOTE_PATH/ansible && ansible-playbook playbook.yml"
+echo "Running Ansible Playbook..."
+ssh -i "$PROJECT_DIR/ansible/$CLIENT_KEY" -o StrictHostKeyChecking=no \
+    -o UserKnownHostsFile=/dev/null \
+    "$USER@$CONTROL_NODE_IP" \
+    "cd $REMOTE_PATH/ansible && ansible-playbook playbook.yml"
