Create MySQL RDS using terraform and update the app to use the new setup (credentials retrieved from AWS Secrets Manager)

--- a/terraform/templates/inventory.tmpl
+++ b/terraform/templates/inventory.tmpl
@@ -5,9 +5,9 @@ all:
     
   hosts:
     app:
-      target_private_ip: ${python_ip}
-      target_public_ip: ${python_ip_public}
-      target_ansible_user: ${python_user}
+      ansible_host: ${python_ip}
+      ansible_user: ${python_user}
+      public_ip: ${python_ip_public}
       
 
 
