--- a/ansible/roles/app/templates/default.j2
+++ b/ansible/roles/app/templates/default.j2
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name {{ hostvars['app']['public_ip'] }};
 
-    root /usr/share/nginx/html;
+    root /var/www/html;
     index index.html;
 
     location /view {
