--- a/terraform/templates/inventory.tmpl
+++ b/terraform/templates/inventory.tmpl
@@ -8,6 +8,10 @@ all:
       ansible_host: ${python_ip}
       ansible_user: ${python_user}
       public_ip: ${python_ip_public}
+    grafana:
+      ansible_host: ${grafana_ip}
+      ansible_user: ${grafana_user}
+            
       
 
 
