Prometheus EC2, security group + ansible setup

--- a/terraform/templates/inventory.tmpl
+++ b/terraform/templates/inventory.tmpl
@@ -11,6 +11,9 @@ all:
     grafana:
       ansible_host: ${grafana_ip}
       ansible_user: ${grafana_user}
+    prometheus:
+      ansible_host: ${prometheus_ip}
+      ansible_user: ${prometheus_user}      
             
       
 
