Update falsk role name from ansible

--- a/terraform/templates/inventory.tmpl
+++ b/terraform/templates/inventory.tmpl
@@ -4,7 +4,7 @@ all:
     flask_port: 5000
     
   hosts:
-    app:
+    flask:
       ansible_host: ${python_ip}
       ansible_user: ${python_user}
       public_ip: ${python_ip_public}
