Prometheus node exporter on Flask ec2 via ansible

--- a/ansible/roles/flask/templates/default.j2
+++ b/ansible/roles/flask/templates/default.j2
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name {{ hostvars['app']['public_ip'] }};
+    server_name {{ hostvars['flask']['public_ip'] }};
 
     root /var/www/html;
     index index.html;
