--- a/ansible/roles/flask/templates/default.j2
+++ b/ansible/roles/flask/templates/default.j2
@@ -11,6 +11,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location /health {
+        proxy_pass http://127.0.0.1:{{ flask_port }}/health;
+    }
+
+    location /metrics {
+        proxy_pass http://127.0.0.1:{{ flask_port }}/metrics;
+    }
+
     location / {
         index index.html;
     }
