--- a/ansible/roles/flask/templates/default.j2
+++ b/ansible/roles/flask/templates/default.j2
@@ -11,15 +11,21 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /health {
-        proxy_pass http://127.0.0.1:{{ flask_port }}/health;
-    }
+    location = /info {
+    proxy_pass http://127.0.0.1:{{ flask_port }}/info;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+}
 
     location /metrics {
         proxy_pass http://127.0.0.1:{{ flask_port }}/metrics;
     }
 
+    location = /info.html {
+        root /var/www/html;
+    }
+
     location / {
-        index index.html;
+        try_files $uri $uri/ =404;
     }
 }
