--- a/terraform/templates/inventory.tmpl
+++ b/terraform/templates/inventory.tmpl
@@ -2,7 +2,8 @@ all:
   vars:
     ansible_ssh_private_key_file: ${clientkey}.pem
     flask_port: 5000
-    
+    flask_private_ip: ${python_ip}
+  
   hosts:
     flask:
       ansible_host: ${python_ip}
