Update network traffic simulation scripts

--- a/ansible/roles/prometheus/templates/WebsiteTest-view.sh.j2
+++ b/ansible/roles/prometheus/templates/WebsiteTest-view.sh.j2
@@ -7,7 +7,7 @@ while true; do
     echo "High load for $duration sec (delay $delay)"
     end=$((SECONDS+duration))
     while [ $SECONDS -lt $end ]; do
-        curl -s http://{{ flask_private_ip }}:5000/ > /dev/null &
+        curl -s http://{{ flask_private_ip }}:5000/view > /dev/null &
         sleep $delay
     done
 
@@ -17,7 +17,7 @@ while true; do
     echo "Low load for $duration sec (delay $delay)"
     end=$((SECONDS+duration))
     while [ $SECONDS -lt $end ]; do
-        curl -s http://{{ flask_private_ip }}:5000/ > /dev/null &
+        curl -s http://{{ flask_private_ip }}:5000/view > /dev/null &
         sleep $delay
     done
 done
