--- a/ansible/roles/flask/templates/app.py.j2
+++ b/ansible/roles/flask/templates/app.py.j2
@@ -41,7 +41,7 @@ def get_secret():
         client = boto3.client("secretsmanager", region_name="us-east-1")
         _secret_cache = json.loads(
             client.get_secret_value(
-                SecretId="monitoring-mysql-secret"
+                SecretId="monitoring-database-secret"
             )["SecretString"]
         )
     return _secret_cache
